data/derived/sp14/progs/unify/prog4443.ml.out
Characters 39-52:
  if n > 0 then digitsOfInt n mod 10 ::(n/10) 
                ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
